# urf-indexing-eval

./: README.md
cpp/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build-python.sh  pyproject.toml  setup.py
cpp/data/lsc/: ids.h5  lsc_actors.json  ratios.h5  tasks.tex  top.h5
cpp/data/vbs/svm/: svms_50rds_128b.json  vbsfull_seen_hplanes.json
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/interactivelearning/: AnnoyHelper.cpp  AnnoyHelper.h  HnswHelper.cpp  HnswHelper.h  IVFHelper.cpp  IVFHelper.h  PyInteractiveLearning.h  PyInterface.cpp  PyInterface.h
cpp/src/interactivelearning/annoy/: annoylib.h
cpp/src/interactivelearning/exq/: ExqClassifier.cpp  ExqClassifier.h
cpp/src/interactivelearning/hnsw/: hnswalg.h
python/: eval_ann.py  generate_hyperplane_groundtruth.py  generate_hyperplanes.py  read_r64.py  run_eval.sh
