[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "interactivelearning"
dynamic = ["version", "readme"]
authors = [
    {name = "Omar Shahbaz Khan"}
]
description = "Interactive Learning experiments with ANN indexes"
requires-python = ">=3.8"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "interactivelearning.__version__"}
readme = {file = "README.md", content-type = "text/markdown" }
